Refactor item and booking management logic
- Added validation for item creation and updates, ensuring fields like title, category, condition, and daily rate meet specified criteria.
- Enhanced booking creation logic to prevent owners from booking their own items and to check for overlapping bookings more robustly.
- Introduced new exception handling for better clarity on errors, replacing generic exceptions with specific ones like BadRequestException and ConflictException.
- Updated entity classes to include createdAt and updatedAt timestamps for better tracking of item and booking states.
- Improved repository queries for better readability and performance, including the use of JPQL for filtering items and bookings.
- Added normalization methods for input values to ensure consistency and prevent errors.
- Updated application properties for email configuration to enhance security.